# 2022RobotCode

./: .eslintrc.json  .gitattributes  .gitignore  .luarc.json  CMakeLists.txt  README.md  build.gradle  build_luajit.bat  simgui-window.json
.wpilib/: wpilib_preferences.json
lib/: buildvm.lib  luajit.lib  minilua.lib
lib/lib/: buildvm.lib  lua51.lib  mac_x86_libluajit-5.1.2.1.0.dylib  minilua.lib
lib/lib/include/: lj_bcdef.h  lj_ffdef.h  lj_libdef.h
lib/luarocks/lib/luarocks/rocks-5.1/: manifest
lib/luarocks/lib/luarocks/rocks-5.1/compat53/0.8-1/: rock_manifest
lib/luarocks/lib/luarocks/rocks-5.1/luafilesystem/1.8.0-1/: rock_manifest
lib/luarocks/lib/luarocks/rocks-5.1/tl/0.13.2-1/: rock_manifest
scripts/: build_bindings.bat  build_bindings_linux.sh  build_bindings_macos.sh  build_luajit.bat  build_luajit_linux.sh  build_luajit_mac.sh  download_godot.bat  download_godot.sh  test.lua
simulator/: Math.gd  README.md  export_presets.cfg  project.godot
simulator/.mono/assemblies/Debug/: api_hash_cache.cfg
simulator/assets/environments/: DefaultEnv.tres
simulator/assets/materials/: AllianceWallMaterial.tres  CarpetMaterial.tres  DirtyGlassMaterial.tres  DirtyGlassShader.tres  SimpleAluminumMaterial.tres  SimpleRubberMaterial.tres  SimpleSteelMaterial(NONfield).tres  SimpleSteelMaterial.tres
simulator/assets/models/: Bee.blend  Bee.blend1  Bee.mtl  BeehiveLine.mtl  ChainTrack.mtl  Field.blend  Field.blend1  Field.mtl  GamePiece.blend  GamePiece.blend1  GamePiece.mtl  GhostRobot.blend  GhostRobot.mtl  SideFlowerTower.mtl  TestWindow.mtl  Tower.blend  Tower.mtl  Tower2.blend  Tower2.mtl  chain.blend  chain.mtl
simulator/assets/models/Field/: FlowerTower.mtl
simulator/assets/textures/diamondplate/: Steel_diamond_plate_pxr128.tif  Steel_diamond_plate_pxr128_bmp.tif
simulator/fields/: 2021HiveHeistField.tscn
simulator/fields/2021HiveHeist/: BlueTower.tres  Chain.tscn  GamePiece.tscn  GamePieceMaterial.tres  LeavesSideTower.tres  LeftTower.tscn  RedTower.tres  RightTower.tscn  SideFlowerTower.gd  SideFlowerTower.tscn  SideTowerPurple.tres  Tower.gd
simulator/fields/2022RapidReact/: 2022RapidReactField.tscn  BlueRung.tres  Hangar.blend  Hangar.blend1  Hangar.mtl  Hangar.tscn  RedRung.tres  Rung.material  Truss.material
simulator/fields/parts/: Ball.gd  Ball.tscn  Block.gd  Block.tscn  Field.tscn  FollowingCamera.gd  SizedBlock.gd  SizedBlock.tscn  SizedHexagon.gd  SizedHexagon.tscn
simulator/filming/: CameraTrack.gd  SimpleMotion.gd
simulator/recordings/: 1614479645.json  1614480193.json  1614480504.json  1614481641.json  1614481728.json  1614481998.json  1614482063.json  1614482545.json  1614482578.json  1614482629.json  1614482664.json  1614563193.json  1614563588.json
simulator/robots/: 2020Robot.tscn  2022ClimberTest.tscn  2022Hook.gd  BoxOnWheels.tscn  ClimberRope.gd
simulator/robots/parts/: AirTank.gd  AirTank.tscn  HeavyThing.gd  HeavyThing.tscn  IntakeArea.gd  IntakeLauncher.gd  MassReadout.gd  MassReadout.tscn  NavX.gd  Piston.gd  PressureReadout.gd  PressureReadout.tscn  Robot.gd  RobotBox.gd  RobotBoxPositionHelper.gd  RobotCylinder.gd  RobotInput.gd  RobotMotor.gd  RobotRuler.gd  RobotUtil.gd  Wheel.gd  Wheel.tres  Wheel.tscn
simulator/robots/parts/sim_devices/: SimClient.gd  SimDoubleSolenoid.gd  SimSolenoid.gd  SimTalonSRX.gd  SimVictorSPX.gd
src/bindings/: bindings.c  bindings.metadesk  md.c
src/lua/: init.lua  intake.lua  robot.lua
src/lua/auto/: coroutines.lua
src/lua/subsystems/: cargo.lua  climber.lua  drivetrain.lua
src/lua/utils/: autoroutine.lua  blendeddrive.lua  colors.lua  logger.lua  math.lua  path.lua  pid.lua  purepursuit.lua  ramp.lua  slideshow.lua  teleopcoroutine.lua  teleoproutine.lua  test.lua  timer.lua  vector.lua
src/lua/wpilib/: ahrs.lua  cameraserver.lua  dashboard.lua  dashboard_ext.lua  filesystem.lua  filesystem_ext.lua  init.lua  io.lua  io_ext.lua  motors.lua  motors_ext.lua  robotbase.lua  server.lua  solenoids.lua  solenoids_ext.lua  stdlib.lua  time.lua
src/lua/wpilib/bindings/: asserts.lua  enum.lua  init.lua
src/main/cpp/: Robot.cpp  httpserver.cpp  luahelpers.cpp
src/main/cpp/wpiliblua/: ahrs.cpp  cameraserver.cpp  dashboard.cpp  filesystem.cpp  io.cpp  motors.cpp  robotbase.cpp  solenoids.cpp  stdlib.cpp  time.cpp
src/main/deploy/logViewer/: index.html  script.js
src/main/deploy/paths/: 60.path  auto1.path  auto2.path  backwardline.path  cone.path  corner.path  curvedstair.path  example.path  forwardline.path  funny.path  line.path  p.path  p2.path  rd.path  square.path  stairPath.path  taxi.path  test.path  triggertest.path  u.path
src/main/include/: httpserver.h  luadef.h  luahelpers.h
tools/logViewer/: .eslintrc.json  normalize.css  script.js
tools/pathMaker/: index.html  script.js
vendordeps/: Phoenix.json  navx_frc.json
